samples/_failures_safe/1761283860_f3d132_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_355fcc78.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_355fcc78.c:149:37: error: expected ‘]’ at end of input
  149 |                    analyzer->words[i
      |                                     ^
      |                                     ]
./samples/SAFE/__tmp_355fcc78.c:149:20: error: expected declaration or statement at end of input
  149 |                    analyzer->words[i
      |                    ^~~~~~~~
./samples/SAFE/__tmp_355fcc78.c:149:20: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_355fcc78.c:149:20: error: expected declaration or statement at end of input
